fix z-index problem

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,7 +5,6 @@
 
 .stars {
     background: url("../images/stars.png") repeat top center;
-    position: absolute;
     top: 0;
     left: 0;
     right: 0;
@@ -13,6 +12,8 @@
     width: 100%;
     height: 630%;
     display: block;
+    position: absolute;
+    z-index: -1;
 }
 
 
@@ -127,6 +128,8 @@ hr {
     display: flex;
     flex-direction: column;
     min-height: 85vh;
+    position: relative;
+    z-index: 0;
 }
 
 /* Header */
